--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,89 @@
+/* serif */
+@font-face {
+    font-family: 'Patua One';
+    src: url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
+}
+
+/* sans serif */
+@font-face {
+    font-family: 'Oswald';
+    src: url("https://fonts.googleapis.com/css2?family=Oswald&display=swap")
+}
+
+/* fall back */
+@font-face {
+    font-family: serif;
+    src: local("serif");
+}
+
+html {
+    font-size: 100%;
+}
+
 body {
     margin: 0;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
+    font-family: "Patua One";
+    font-size: 10px;
 }
+
+
 
 .grid-container {
     display: grid;
     height: 100vh;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat()
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-areas: 
+        "header header header header "
+        "main main top-courses navigation"
+        "main main top-courses navigation"
+        "main main top-courses navigation"
+        "footer footer footer footer";
+}
+
+.header {
+    background-color: green;
+    grid-area: header;
+    font-family: "Oswald";
+    font-size: 200%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main {
+    background-color: blue;
+    grid-area:main;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items:start;
+}
+
+.top-courses {
+    background-color: pink;
+    grid-area: top-courses
+}
+
+.navigation {
+background-color: red;
+grid-area: navigation;
+}
+
+.footer {
+background-color: gray;
+grid-area:footer;
+font-family: "Oswald";
+    font-size: 200%;
+}
+
+.article {
+    margin: 10px;
+}
+
+.article-title {
+    font-family: "Oswald";
+    font-size: 150%;
 }
