--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,30 @@ html {
 
 body {
     margin: 0;
+    padding: 0;
     background-color: white;
     color: black;
     font-family: "Patua One";
     font-size: 10px;
 }
 
+ul {
+    padding-left: 5px;
+    line-height: 2.5;
+    list-style-type: none;
+    font-size: larger;
+}
 
+i {
+    margin-right: 5px;
+}
+
+hr {
+    width: 100%;
+    height: 7px;
+    background-color: purple;
+    border: 0;
+}
 
 .grid-container {
     display: grid;
@@ -49,8 +66,10 @@ body {
     font-family: "Oswald";
     font-size: 200%;
     display:flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content:space-between;
     align-items: center;
+    padding: 0;
 }
 
 .main {
@@ -60,16 +79,19 @@ body {
     flex-direction: column;
     justify-content: left;
     align-items:start;
+    margin: 10px 5px 10px 5px;
 }
 
 .top-courses {
     background-color: pink;
-    grid-area: top-courses
+    grid-area: top-courses;
+    margin: 10px 5px 10px 5px;
 }
 
 .navigation {
 background-color: red;
 grid-area: navigation;
+margin: 10px 5px 10px 5px;
 }
 
 .footer {
