--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,14 @@ hr {
     border: 0;
 }
 
+a:hover, a:focus{
+text-decoration: none;
+}
+
+a:active {
+    color: purple;
+}
+
 .grid-container {
     display: grid;
     height: 100vh;
@@ -92,7 +100,9 @@ hr {
 background-color: red;
 grid-area: navigation;
 margin: 10px 5px 10px 5px;
-}
+display: flex;
+flex-direction: column;
+justify-items: center;}
 
 .footer {
 background-color: gray;
