--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,132 @@
 /* serif */
 @font-face {
-    font-family: 'Patua One';
-    src: url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
+  font-family: "Patua One";
+  src: url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
 }
 
 /* sans serif */
 @font-face {
-    font-family: 'Oswald';
-    src: url("https://fonts.googleapis.com/css2?family=Oswald&display=swap")
+  font-family: "Oswald";
+  src: url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 }
 
 /* fall back */
 @font-face {
-    font-family: serif;
-    src: local("serif");
+  font-family: serif;
+  src: local("serif");
 }
 
 html {
-    font-size: 100%;
+  font-size: 100%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    color: black;
-    font-family: "Patua One";
-    font-size: 10px;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  color: black;
+  font-family: "Patua One";
+  font-size: 10px;
 }
 
 ul {
-    padding-left: 5px;
-    line-height: 2.5;
-    list-style-type: none;
-    font-size: larger;
+  padding-left: 5px;
+  line-height: 2.5;
+  list-style-type: none;
+  font-size: larger;
 }
 
 i {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 hr {
-    width: 100%;
-    height: 7px;
-    background-color: purple;
-    border: 0;
+  width: 100%;
+  height: 7px;
+  background-color: purple;
+  border: 0;
 }
 
-a:hover, a:focus{
-text-decoration: none;
+a {
+  color: rgb(81, 7, 81);
+}
+
+a:hover,
+a:focus {
+  text-decoration: none;
 }
 
 a:active {
-    color: purple;
+  color: purple;
+}
+
+button {
+  background-color: inherit;
+  border: 0;
+  margin: 15px 0px 15px 0px;
 }
 
 .grid-container {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-areas: 
-        "header header header header "
-        "main main top-courses navigation"
-        "main main top-courses navigation"
-        "main main top-courses navigation"
-        "footer footer footer footer";
+  display: grid;
+  height: 100vh;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas:
+    "header header header header "
+    "main main top-courses navigation"
+    "main main top-courses navigation"
+    "main main top-courses navigation"
+    "footer footer footer footer";
 }
 
 .header {
-    background-color: green;
-    grid-area: header;
-    font-family: "Oswald";
-    font-size: 200%;
-    display:flex;
-    flex-direction: column;
-    justify-content:space-between;
-    align-items: center;
-    padding: 0;
+  grid-area: header;
+  font-family: "Oswald";
+  font-size: 200%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
 }
 
 .main {
-    background-color: blue;
-    grid-area:main;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items:start;
-    margin: 10px 5px 10px 5px;
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: start;
+  margin: 10px 5px 10px 5px;
 }
 
 .top-courses {
-    background-color: pink;
-    grid-area: top-courses;
-    margin: 10px 5px 10px 5px;
+  grid-area: top-courses;
+  margin: 10px 5px 10px 5px;
 }
 
 .navigation {
-background-color: red;
-grid-area: navigation;
-margin: 10px 5px 10px 5px;
-display: flex;
-flex-direction: column;
-justify-items: center;}
+  grid-area: navigation;
+  margin: 10px 5px 10px 5px;
+  display: flex;
+  flex-direction: column;
+}
 
 .footer {
-background-color: gray;
-grid-area:footer;
-font-family: "Oswald";
-    font-size: 200%;
+  grid-area: footer;
+  font-family: "Oswald";
+  font-size: 90%%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
 }
 
 .article {
-    margin: 10px;
+  margin: 10px;
 }
 
 .title {
-    font-family: "Oswald";
-    font-size: 150%;
+  font-family: "Oswald";
+  font-size: 150%;
 }
