--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ button {
 .footer {
   grid-area: footer;
   font-family: "Oswald";
-  font-size: 90%%;
+  font-size: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
