--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 /* serif */
 @font-face {
-  font-family: "Patua One";
-  src: url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
+  font-family: Patua_One;
+  src: url(fonts/PTSerif-Regular.ttf)
 }
 
 /* sans serif */
 @font-face {
-  font-family: "Oswald";
-  src: url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+  font-family: Oswald;
+  src: url(fonts/FacultyGlyphic-Regular.ttf);
 }
 
 /* fall back */
@@ -16,17 +16,15 @@
   src: local("serif");
 }
 
-html {
-  font-size: 100%;
-}
-
 body {
   margin: 0;
   padding: 0;
   background-color: white;
   color: black;
-  font-family: "Patua One";
+  font-size: 100%;
+  font-family: "Patua_One";
   font-size: 10px;
+  line-height: 2.0;
 }
 
 ul {
@@ -43,21 +41,22 @@ i {
 hr {
   width: 100%;
   height: 7px;
-  background-color: purple;
+  background-color: rgb(145, 5, 145);
   border: 0;
 }
 
 a {
-  color: rgb(81, 7, 81);
+  color: rgba(128, 0, 128, 0.747);
 }
 
 a:hover,
 a:focus {
   text-decoration: none;
+  color: rgb(145, 5, 145);
 }
 
 a:active {
-  color: purple;
+  color: rgb(145, 5, 145);
 }
 
 button {
@@ -72,7 +71,7 @@ button {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-template-areas:
-    "header header header header "
+    "header header header header"
     "main main top-courses navigation"
     "main main top-courses navigation"
     "main main top-courses navigation"
@@ -124,6 +123,7 @@ button {
 
 .article {
   margin: 10px;
+  text-align: justify;
 }
 
 .title {
