--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ hr {
 
 a {
   color: rgba(128, 0, 128, 0.747);
+  font-size: 175%;
 }
 
 a:hover,
@@ -81,7 +82,7 @@ button {
 .header {
   grid-area: header;
   font-family: "Oswald";
-  font-size: 200%;
+  font-size: 400%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -101,6 +102,8 @@ button {
 .top-courses {
   grid-area: top-courses;
   margin: 10px 5px 10px 5px;
+  padding-left: 200px;
+  font-size: 125%;
 }
 
 .navigation {
@@ -113,7 +116,7 @@ button {
 .footer {
   grid-area: footer;
   font-family: "Oswald";
-  font-size: 90%;
+  font-size: 125%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -124,9 +127,10 @@ button {
 .article {
   margin: 10px;
   text-align: justify;
+  font-size: 150%;
 }
 
 .title {
   font-family: "Oswald";
-  font-size: 150%;
+  font-size: 200%;
 }
